--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -16,3 +16,4 @@
 @import "theme/_about-us.scss";
 @import "theme/_gallery.scss";
 @import "theme/_get-started.scss";
+@import "theme/_broshure.scss";
