--- a/scss/theme/_lead-section.scss
+++ b/scss/theme/_lead-section.scss
@@ -4,26 +4,26 @@
     position: relative;
 
     .hello{
-        padding: 200px 0;
+        padding: 170px 0;
         background-size: cover;
         background-position: center center;
 
         p, h2{
             font-family: $font-roboto;
             margin-bottom: 35px;
-            font-size: 1.5rem;
+            font-size: 1.3rem;
         }
 
         h2{
-            font-size: 2.5rem;
+            font-size: 1.6rem;
             font-weight: $font-weight-regular;
             line-height: 1;
-            letter-spacing: 0.2em;
+            letter-spacing: 0.1rem;
         }
 
         h3{
             font-family: $font-roboto;
-            font-size: 1.5rem !important;
+            font-size: 1.3rem !important;
             margin-bottom: 70px;
         }
 
@@ -134,7 +134,25 @@
 }
 
 
+@media(min-width:576px){
+    .lead-slider-wrapper{
 
+        .hello{
+            p,h2{
+               font-size: 1.5rem; 
+            }
+            h2{
+                font-size: 2.3rem !important;
+                line-height: 1.4;
+                letter-spacing: 0.5rem;
+            }
+            h3, p{
+                font-size: 2rem !important;
+            }
+        }
+    }
+
+}
 
 
 
@@ -150,7 +168,7 @@
             h2{
                 font-size: 3rem !important;
                 line-height: 1.4;
-                letter-spacing: 0.7em;
+                letter-spacing: 0.5rem;
             }
             h3, p{
                 font-size: 2rem !important;
