Finished kontakt page

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -17,3 +17,4 @@
 @import "theme/_gallery.scss";
 @import "theme/_get-started.scss";
 @import "theme/_broshure.scss";
+@import "theme/kontakt/_kontakt.scss";
