--- a/scss/theme/_base.scss
+++ b/scss/theme/_base.scss
@@ -17,6 +17,10 @@ body{
     position: relative;
 }
 
+#scroll{
+    margin-bottom: 40px;
+}
+
 .img-holder{
     position: relative;
     background: #ccc url('assets/logo-small.png') no-repeat center center;
@@ -101,7 +105,6 @@ $partners-border-color-blue: #178ec6;
     filter:"alpha(opacity=100)";
     -ms-filter:"alpha(opacity=100)";
 }
-
 
 
 @media(min-width:768px){
