--- a/css/theme.css
+++ b/css/theme.css
@@ -590,14 +590,20 @@ footer {
   .lead-slider-wrapper .btn-slider {
     padding: 8px 37px; }
   .lead-slider-wrapper .hello h2 {
-    font-size: 3.5rem !important;
+    font-size: 2.3rem !important;
     line-height: 1.4;
     letter-spacing: 0.5rem; }
   .lead-slider-wrapper .hello h3, .lead-slider-wrapper .hello p {
-    font-size: 2rem !important; } }
+    font-size: 1.5rem !important; } }
 @media (min-width: 992px) {
   .lead-slider-wrapper .hello {
     padding: 300px 0; }
+    .lead-slider-wrapper .hello h2 {
+      font-size: 3rem !important;
+      line-height: 1.4;
+      letter-spacing: 0.5rem; }
+    .lead-slider-wrapper .hello h3, .lead-slider-wrapper .hello p {
+      font-size: 2rem !important; }
   .lead-slider-wrapper:after {
     height: 150px; }
   .lead-slider-wrapper .owl-dots {
@@ -606,7 +612,7 @@ footer {
     padding: 100px 0 !important; } }
 .partners-section {
   background: #d6d6d6;
-  padding: 30px 0; }
+  padding: 65px 0; }
   .partners-section .owl-carousel .owl-dots .owl-dot.active span,
   .partners-section .owl-carousel .owl-dots .owl-dot:hover span {
     background: #178ec6; }
@@ -673,10 +679,10 @@ footer {
 
 @media (min-width: 768px) {
   .partners-section {
-    padding: 50px 0; } }
+    padding: 70px 0; } }
 @media (min-width: 992px) {
   .partners-section {
-    padding: 70px 0; } }
+    padding: 80px 0; } }
 @media (min-width: 1200px) {
   .partners-section {
     padding: 85px 0; } }
@@ -684,7 +690,7 @@ footer {
   color: #444444 !important; }
 
 .contact-section {
-  padding: 50px 0; }
+  padding: 65px 0; }
   .contact-section p {
     font-size: 1.1rem; }
   .contact-section .contact-form .form-control {
@@ -804,7 +810,7 @@ footer {
     text-transform: uppercase; }
 
 .broshure-section {
-  padding: 30px 0; }
+  padding: 65px 0; }
   .broshure-section .brochure-tittle {
     border-top: 3px solid rgba(138, 185, 87, 0.8);
     background: linear-gradient(90deg, #c1c1c1 0%, #ffffff 100%); }
@@ -817,16 +823,16 @@ footer {
 
 @media (min-width: 768px) {
   .broshure-section {
-    padding: 50px 0; } }
+    padding: 70px 0; } }
 @media (min-width: 992px) {
   .broshure-section {
-    padding: 70px 0; } }
+    padding: 80px 0; } }
 @media (min-width: 1200px) {
   .broshure-section {
     padding: 85px 0; } }
 .map-section article iframe {
   width: 100%;
-  height: 200px; }
+  height: 500px; }
 
 .image-section article img {
   width: 100%; }
@@ -848,19 +854,19 @@ footer {
 
 @media (min-width: 576px) {
   .map-section article iframe {
-    height: 300px; }
+    height: 600px; }
 
   .image-section .cover-image .image-paragraph p {
     font-size: 1.6rem; } }
 @media (min-width: 768px) {
   .map-section article iframe {
-    height: 400px; }
+    height: 600px; }
 
   .image-section .cover-image .image-paragraph p {
     font-size: 1.8rem; } }
 @media (min-width: 992px) {
   .map-section article iframe {
-    height: 500px; }
+    height: 600px; }
 
   .image-section .cover-image .image-paragraph p {
     font-size: 2.2rem; } }
