--- a/scss/theme/_lead-section.scss
+++ b/scss/theme/_lead-section.scss
@@ -166,12 +166,12 @@
 
         .hello{
             h2{
-                font-size: 3.5rem !important;
+                font-size: 2.3rem !important;
                 line-height: 1.4;
                 letter-spacing: 0.5rem;
             }
             h3, p{
-                font-size: 2rem !important;
+                font-size: 1.5rem !important;
             }
         }
     }
@@ -182,6 +182,15 @@
     .lead-slider-wrapper{
         .hello{
             padding: 300px 0;
+            
+            h2{
+                font-size: 3rem !important;
+                line-height: 1.4;
+                letter-spacing: 0.5rem;
+            }
+            h3, p{
+                font-size: 2rem !important;
+            }
         }
 
         &:after{
