--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -18,3 +18,4 @@
 @import "theme/_get-started.scss";
 @import "theme/_broshure.scss";
 @import "theme/kontakt/_kontakt.scss";
+@import "theme/_activities.scss";
