--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -19,3 +19,4 @@
 @import "theme/_broshure.scss";
 @import "theme/kontakt/_kontakt.scss";
 @import "theme/_activities.scss";
+@import "theme/about_us/_about-us.scss";
