--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -20,3 +20,4 @@
 @import "theme/kontakt/_kontakt.scss";
 @import "theme/_activities.scss";
 @import "theme/about_us/_about-us.scss";
+@import "theme/about_us/_lead-section.scss";
