--- a/css/theme.css
+++ b/css/theme.css
@@ -912,8 +912,9 @@ footer {
   .about-us-section {
     margin: 110px 0; } }
 .lead-section {
-  padding: 80px 0; }
+  padding: 120px 0; }
   .lead-section h1 {
+    font-size: 1.5rem;
     font-family: "Roboto", sans-serif;
     font-weight: 700; }
   .lead-section p {
@@ -921,6 +922,8 @@ footer {
 
 @media (min-width: 576px) {
   .lead-section {
-    padding: 120px 0; } }
+    padding: 140px 0; }
+    .lead-section h1 {
+      font-size: 2.5rem; } }
 
 /*# sourceMappingURL=theme.css.map */
