--- a/scss/theme/about_us/_lead-section.scss
+++ b/scss/theme/about_us/_lead-section.scss
@@ -2,10 +2,11 @@
 
 .lead-section{
     
-    padding: 80px 0;
+    padding: 120px 0;
     
     
     h1{
+        font-size: 1.5rem;
         font-family: $font-roboto;
         font-weight: $font-weight-bold;
     }
@@ -20,6 +21,10 @@
 @media(min-width:576px){
     
     .lead-section{
-        padding: 120px 0;
+        padding: 140px 0;
+        
+        h1{
+            font-size: 2.5rem;
+        }
     }
 }
